--- a/index.html
+++ b/index.html
@@ -13,20 +13,23 @@
         color: white;
     }
 
-    #color-form {
+    #color-form, #image-upload {
         margin-bottom: 1em;
     }
 
-    #click-instructions {
+    #click-instructions, #result, #original-image {
         display: none;
     }
 
     #result {
-        display: flex;
+        flex-direction: column;
     }
 
     #palettes {
-        margin-right: 2em;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        gap: 1em;
+        margin-bottom: 2em;
     }
 
     #details {
@@ -41,11 +44,48 @@
         height: 8.75em;
         margin-bottom: .5em;
     }
+
+    .palette-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .palette-image {
+        width: 100%;
+        height: auto;
+        max-width: 300px;
+        margin-top: 1em;
+    }
+
+    #original-image {
+        max-width: 300px;
+        margin-top: 2em;
+    }
+
+    .palette-colors {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-bottom: .25em;
+    }
+
+    .palette-color {
+        width: 2em;
+        height: 2em;
+        margin: 0.125em;
+        cursor: pointer;
+    }
 </style>
 
 <body>
     <h1>acerola's epic color palkettes</h1>
-    <p>Generate as many palettes as you want until you find one you like. Then take a picture of the palettes and tell Acerola which one you picked.</p>
+    <p>Upload an image, then generate palettes. Each palette will show a modified version of your image using the generated colors.</p>
+
+    <div id="image-upload">
+        <input type="file" id="imageInput" accept="image/*">
+    </div>
+
     <form id="color-form">
         <label for="color-mode">Hue mode:</label>
         <select id="color-mode" name="color-mode">
@@ -68,48 +108,61 @@
             <span id="details-rgb"></span>
         </div>
     </div>
+    <img id="original-image">
     <script src="./colors.js"></script>
     <script>
+
+        let originalImage = null;
+
         const getHexFromRGB = (rgb) => `#${Number(rgb[0]).toString(16).padStart(2, "0")}${Number(rgb[1]).toString(16).padStart(2, "0")}${Number(rgb[2]).toString(16).padStart(2, "0")}`;
 
-        const getFakeResult = () => {
-            const palettesCount = 4;
-            const colorsCounts = 16;
-            const palettes = [];
-            for (let i = 0; i < palettesCount; i++) {
-                const colors = [];
-                for (let j = 0; j < colorsCounts; j++) {
-                    colors.push({
-                        rgb: [Math.floor(Math.random() * 256), Math.floor(Math.random() * 256), Math.floor(Math.random() * 256)]
-                    });
-                }
-                palettes.push({
-                    colors
-                });
+        const handleImageUpload = (event) => {
+            const file = event.target.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = (e) => {
+                    originalImage = new Image();
+                    originalImage.onload = () => {
+                        document.getElementById('original-image').src = e.target.result;
+                        document.getElementById('original-image').style.display = 'block';
+                        document.getElementById('palettes').innerHTML = '';
+                        document.getElementById('click-instructions').style.display = 'none';
+                    };
+                    originalImage.src = e.target.result;
+                };
+                reader.readAsDataURL(file);
             }
-            return palettes;
-        }
+        };
 
         const handleResult = (palettes) => {
             const palettesElement = document.getElementById("palettes");
             palettesElement.innerHTML = "";
             palettes.forEach((palette, paletteIndex) => {
-                const paletteElement = document.createElement("div");
-                palettesElement.appendChild(paletteElement);
+                const paletteContainer = document.createElement("div");
+                paletteContainer.className = "palette-container";
+                palettesElement.appendChild(paletteContainer);
+
                 const paletteLabelElement = document.createElement("span");
-                paletteLabelElement.innerText = `Palette ${paletteIndex + 1}:`
+                paletteLabelElement.innerText = palette.name;
                 paletteLabelElement.style.lineHeight = "1";
                 paletteLabelElement.style.display = "block";
                 paletteLabelElement.style.marginBottom = ".125em";
-                paletteElement.appendChild(paletteLabelElement);
+                paletteContainer.appendChild(paletteLabelElement);
+
+                const colorDetailsElement = document.createElement("span");
+                paletteLabelElement.innerText = palette.name;
+                paletteLabelElement.style.lineHeight = "1";
+                paletteLabelElement.style.display = "block";
+                paletteLabelElement.style.marginBottom = ".125em";
+
                 const paletteColorsElement = document.createElement("div");
-                paletteColorsElement.style.display = "flex";
-                paletteColorsElement.style.flexWrap = "wrap";
-                paletteColorsElement.style.marginBottom = ".25em";
-                paletteElement.appendChild(paletteColorsElement);
-                for (const color of palette) {
+                paletteColorsElement.className = "palette-colors";
+                paletteContainer.appendChild(paletteColorsElement);
+
+                for (const color of palette.colors) {
                     const hex = getHexFromRGB(color);
                     const paletteColorElement = document.createElement("div");
+                    paletteColorElement.className = "palette-color";
                     paletteColorElement.addEventListener("click", () => {
                         const detailsColor = document.getElementById("details-color");
                         const detailsHex = document.getElementById("details-hex");
@@ -119,15 +172,40 @@
                         detailsRGB.innerText = `RGB: (${color[0]}, ${color[1]}, ${color[2]})`;
                     });
                     paletteColorElement.style.backgroundColor = hex;
-                    paletteColorElement.style.width = "2em";
-                    paletteColorElement.style.height = "2em";
                     paletteColorsElement.appendChild(paletteColorElement);
                 }
+
+                paletteContainer.appendChild(paletteLabelElement);
+
+
+                // Create a canvas for the modified image
+                const canvas = document.createElement('canvas');
+                const ctx = canvas.getContext('2d');
+                canvas.width = originalImage.width;
+                canvas.height = originalImage.height;
+                ctx.drawImage(originalImage, 0, 0);
+
+                // Quantize the image using the palette
+                const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+                const quantizedImageData = quantizeImage(imageData, palette.colors);
+                ctx.putImageData(quantizedImageData, 0, 0);
+
+                // Create an img element for the modified image
+                const modifiedImage = document.createElement('img');
+                modifiedImage.src = canvas.toDataURL();
+                modifiedImage.className = 'palette-image';
+                paletteContainer.appendChild(modifiedImage);
             });
-        }
+        };
+
+        document.getElementById("imageInput").addEventListener("change", handleImageUpload);
 
         document.getElementById("color-form").addEventListener("submit", (e) => {
             e.preventDefault();
+            if (!originalImage) {
+                alert("Please upload an image first.");
+                return;
+            }
             const colorMode = document.getElementById("color-mode");
             const colorCount = document.getElementById("color-count");
             const detailsColor = document.getElementById("details-color");
@@ -136,9 +214,12 @@
             detailsColor.style.backgroundColor = "";
             detailsHex.innerText = "";
             detailsRGB.innerText = "";
-            const result = generatePalettes(colorMode.value, colorCount.value);
+            const result = generatePalettes(colorMode.value, parseInt(colorCount.value));
             handleResult(result);
+            document.getElementById('original-image').style.display = 'none';
             document.getElementById("click-instructions").style.display = "block";
+            document.getElementById('result').style.display = "flex";
+
         });
     </script>
 </body>
