Fix minor JS style issues, spelling

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 </style>
 
 <body>
-    <h1>acerola's epic color palkettes</h1>
+    <h1>acerola's epic color palettes</h1>
     <p>Generate as many palettes as you want until you find one you like. Then take a picture of the palettes and tell Acerola which one you picked.</p>
     <form id="color-form">
         <label for="color-mode">Hue mode:</label>
         <select id="color-mode" name="color-mode">
             <option value="monochromatic">Monochromatic</option>
-            <option value="analagous">Analagous</option>
+            <option value="analogous">Analogous</option>
             <option value="complementary">Complementary</option>
             <option value="triadic complementary">Triadic Complementary</option>
             <option value="tetradic complementary">Tetradic Complementary</option>
